terraform/main.tf
provider "aws" {
  region = var.aws_region
}

resource "aws_security_group" "ci_cd_sg" {
  name        = "ci-cd-sg"
  description = "Security group for CI/CD Node.js application"
  

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "ci_cd_ec2" {
  ami           = var.ami_id
  instance_type = var.instance_type
  key_name      = var.key_name

  security_groups = [aws_security_group.ci_cd_sg.name]

  tags = {
    Name = "ci-cd-node-app-instance"
  }
}
